updated swagger declarative
