# controller/nearestUser.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"App-server/helper"
+	"App-server/types"
 
 	"github.com/Gurpreet-Bacancy/bcl/model"
 	"github.com/gofiber/fiber/v2"
@@ -12,14 +13,15 @@ import (
 // @Summary get Get Nearest User.
 // @Description it give nearest 10 user.
 // @Tags root
-// @Accept */*
+// @Accept octet-stream
 // @Produce octet-stream
-// @Success 200 {object} map[string]interface{}
+// @Param coordinates body types.Coordinates true "user cooridnates"
+// @Success 200 {object} []types.UserCoordinateItem
 // @Router /v1/nearest/user [post]
 func (app *Application) GetNearestUser(c *fiber.Ctx) error {
 	var (
 		err            error
-		reqCoordinates model.Coordinates
+		reqCoordinates types.Coordinates
 	)
 
 	// Unmarshal data from request body
@@ -28,8 +30,13 @@ func (app *Application) GetNearestUser(c *fiber.Ctx) error {
 		return helper.HandleError(c, 500, err, "Something went wrong while unmarshal user coordinates")
 	}
 
+	cc := model.Coordinates{
+		Latitude:  reqCoordinates.Latitude,
+		Longitude: reqCoordinates.Longitude,
+	}
+
 	// get 10 nearest users
-	Usercoordinates, err := app.models.Coordinates.GetNearestUsers(reqCoordinates)
+	Usercoordinates, err := app.models.Coordinates.GetNearestUsers(cc)
 	if err != nil {
 		return helper.HandleError(c, 500, err, "Something went wrong while getting user coordinates details")
 	}
