# docs/fibersimple/swagger.json
@@ -25,7 +25,7 @@
             "get": {
                 "description": "get the status of server.",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -49,7 +49,7 @@
             "post": {
                 "description": "user success to login then generate active token",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -58,12 +58,22 @@
                     "root"
                 ],
                 "summary": "check user login",
+                "parameters": [
+                    {
+                        "description": "user login",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UserLoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/types.UserLoginResponse"
                         }
                     }
                 }
@@ -73,7 +83,7 @@
             "get": {
                 "description": "it takes user token and fetch user location from db.",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -95,7 +105,7 @@
             "put": {
                 "description": "it takes user token and fetch user location from db and updates to it.",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -117,7 +127,7 @@
             "post": {
                 "description": "it takes user token and fetch user location from db if exits otherwise creates new.",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -141,7 +151,7 @@
             "post": {
                 "description": "it give nearest 10 user.",
                 "consumes": [
-                    "*/*"
+                    "application/octet-stream"
                 ],
                 "produces": [
                     "application/octet-stream"
@@ -150,14 +160,76 @@
                     "root"
                 ],
                 "summary": "get Get Nearest User.",
+                "parameters": [
+                    {
+                        "description": "user cooridnates",
+                        "name": "coordinates",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.Coordinates"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.UserCoordinateItem"
+                            }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "types.Coordinates": {
+            "type": "object",
+            "properties": {
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.UserCoordinateItem": {
+            "type": "object",
+            "properties": {
+                "distance": {
+                    "type": "number"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "userID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.UserLoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UserLoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
                 }
             }
         }
